[gd_scene load_steps=10 format=3 uid="uid://swmrbljtbkmk"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_sk6oh"]
[ext_resource type="Texture2D" uid="uid://brdvijiwwrcfc" path="res://icon.svg" id="1_staib"]
[ext_resource type="AudioStream" uid="uid://2jk1sn0htayi" path="res://assets/audio/music/megalovania.mp3" id="2_eg1po"]
[ext_resource type="Texture2D" uid="uid://bpqowjeyodwes" path="res://assets/sprites/kenney_ui-pack/PNG/green_button00.png" id="3_kcchd"]
[ext_resource type="FontFile" uid="uid://cfgg1b4uccg52" path="res://assets/fonts/gwibble/GWIBBLE_.TTF" id="4_2ierc"]
[ext_resource type="Texture2D" uid="uid://x00hsla52hpi" path="res://assets/sprites/kenney_ui-pack/PNG/green_button03.png" id="4_5mhth"]
[ext_resource type="Texture2D" uid="uid://cgwcps61nanuf" path="res://assets/sprites/kenney_ui-pack/PNG/red_button01.png" id="6_1ij0y"]
[ext_resource type="Texture2D" uid="uid://cohp7c1t155ci" path="res://assets/sprites/kenney_ui-pack/PNG/red_button00.png" id="7_wxurv"]

[sub_resource type="Theme" id="Theme_ul13m"]
default_font = ExtResource("4_2ierc")
default_font_size = 60

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_sk6oh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_staib")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_eg1po")
autoplay = true

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_ul13m")

[node name="Play" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 780.0
offset_top = 500.0
offset_right = 1160.0
offset_bottom = 598.0
texture_normal = ExtResource("3_kcchd")
texture_pressed = ExtResource("4_5mhth")
stretch_mode = 0

[node name="Label" type="Label" parent="Control/Play"]
layout_mode = 0
offset_right = 380.0
offset_bottom = 98.0
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 780.0
offset_top = 609.0
offset_right = 1160.0
offset_bottom = 707.0
texture_normal = ExtResource("6_1ij0y")
texture_pressed = ExtResource("7_wxurv")
stretch_mode = 0

[node name="Label" type="Label" parent="Control/Quit"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 380.0
offset_bottom = 98.0
text = "QUIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TestRandom" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 790.0
offset_top = 299.0
offset_right = 1170.0
offset_bottom = 397.0
texture_normal = ExtResource("3_kcchd")
texture_pressed = ExtResource("4_5mhth")
stretch_mode = 0

[node name="Label" type="Label" parent="Control/TestRandom"]
layout_mode = 0
offset_right = 380.0
offset_bottom = 98.0
text = "Test Random
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/TestRandom" to="." method="_on_test_random_pressed"]
